--- a/autres-projets.html
+++ b/autres-projets.html
@@ -46,9 +46,9 @@
     </div>
 
     <div class="ligne2">
-        <div class="ba3"><a href="http://projets1.www.alexanthoine.fr"><img src="img/autres-projets/blackmirror.jpg" width="148.3" height="218"><p><i>Balck Mirror</i></p></a></div>
+        <div class="ba3"><a href="https://projets1.alexanthoine.fr/"><img src="img/autres-projets/blackmirror.jpg" width="148.3" height="218"><p><i>Balck Mirror</i></p></a></div>
         <div class="ba4"><a href="http://projets1.site.thibaudbarrand.fr/"><img src="img/autres-projets/htsdo.jpg" width="164" height="218"><p><i>How To Sell </i><br>Drugs Online</p></a></div>
-        <div class="blackmirror2"><a href="http://projets1.www.alexanthoine.fr"><p>Black Data</p></a></div>
+        <div class="blackmirror2"><a href="https://projets1.alexanthoine.fr/"><p>Black Data</p></a></div>
         <div class="htsdo2"><a href="http://projets1.site.thibaudbarrand.fr/"><p>Wattor</p></a></div>
     </div>
 
@@ -59,7 +59,7 @@
 
     <div class="ligne4">
         <div class="ba7"><a href="https://projets1.marinebeurier.fr/"><img src="img/autres-projets/girlboss.jpg" width="152" height="226"><p><i>Girlboss</i><br>Polluting girl</p></a></div>
-        <div class="ba8"><a href="http://projets1.www.raphbonin.fr/"><img src="img/autres-projets/eagle-eye.jpg" width="150.67" height="226"><p><i>L'oeil du mal</i><br>Pollution cachée <br>des data center</p></a></div>
+        <div class="ba8"><a href="http://projets1.raphbonin.fr/"><img src="img/autres-projets/eagle-eye.jpg" width="150.67" height="226"><p><i>L'oeil du mal</i><br>Pollution cachée <br>des data center</p></a></div>
     </div>
 
     <div class="ligne5">
@@ -68,7 +68,7 @@
     </div>
 
     <div class="ligne6">
-        <div class="ba11"><a href="http://projets1.mathisbotton.fr"><img src="img/autres-projets/thesocial.jpg" width="154" height="206"></a><p><i>The social network</i><br></p></div>
+        <div class="ba11"><a href="http://projets1.nathanbroglin.fr"><img src="img/autres-projets/thesocial.jpg" width="154" height="206"></a><p><i>The social network</i><br></p></div>
         <div class="the-social2"><a href="http://projets1.nathanbroglin.fr"><p>The shadow of <br>sociability</p></a></div>
     </div>
 </main>
