--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/lib/normalize.css">
     <link rel="stylesheet" href="./css/mescss/menu.css">
     <link rel="stylesheet" href="./css/mescss/typography.css">
-    <link rel="stylesheet" href="./css/mescss/accueil.css">
+    <link rel="stylesheet" href="./css/mescss/style-mise-en-page.css">
+    <link rel="stylesheet" href="./css/mescss/style-graphique.css">
 
 </head>
 <body class=" ">
@@ -90,11 +91,11 @@
 </div>
 
 <footer>
-    <div class="fond_footer"></div>
-    <div class="nom_prenom"><p>Nina BELLINO A1</p></div>
-    <div class="mailto"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
-    <div class="projet"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
-    <div class="mmi_montbe"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
+    <div class="fond_footer1"></div>
+    <div class="nom_prenom1"><p>Nina BELLINO A1</p></div>
+    <div class="mailto1"><a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a></div>
+    <div class="projet1"><p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p></div>
+    <div class="mmi_montbe1"><a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a></div
 </footer>
 </body>
 </html>
