--- a/Pollution.html
+++ b/Pollution.html
@@ -101,8 +101,7 @@
     <p>Tu peux à présent visionner l'interview, réalisé dans le cadre d'un
         exercice pédagogique au département MMi de Montbéliard, sur la thématique
         de The Dark Side of The Web.</p>
-    <div class="vid-inter"><img src="img/pollution/vid.png" width="375" height="453"></div>
-    <div class="play"><img src="img/pollution/play.png" width="89" height="89"></div>
+    <div class="vid-inter"><video src="img/pollution/Micro_Trottoir_Nina_Bellino.mp4" width="375" height="400" controls></div>
 </div>
 
 
