--- a/Codepoursuite.html
+++ b/Codepoursuite.html
@@ -55,13 +55,15 @@
     <h2>Benjamin : jamais sans son ordinateur, est un jeune pirate informatique à
     la recherche de sa mère</h2>
         <div class="texte1">
-        <p>Internet fait partie de ton quotidien, que ce soit pour faire des
-        recherches ou bien jouer à des jeux. Comme pour Benjamin, le héros du film
-        « Code Poursuite ». On remarque que dans ce film, Benjamin se sert
-        d’internet, pour les réseaux sociaux ou bien pour hacker des systèmes. Il
-        est très fort pour hacker les ordinateurs, il a par exemple utilisé ses
-        compétences informatiques afin de changer ses résultats scolaires lors d’un
-        test, pour lui et pour ses camarades de classe.</p></div>
+            <blockquote>
+                <p>Internet fait partie de ton quotidien, que ce soit pour faire des
+                    recherches ou bien jouer à des jeux. </p></blockquote>
+            <p>Comme pour Benjamin, le héros du film « Code Poursuite ». On remarque que dans ce film, Benjamin se sert
+                d’internet, pour les réseaux sociaux ou bien pour hacker des systèmes. Il
+                est très fort pour <strong> hacker les ordinateurs</strong>, il a par exemple utilisé ses
+                compétences informatiques afin de changer ses résultats scolaires lors d’un
+                test, pour lui et pour ses camarades de classe.</p>
+        </div>
 </div>
 
 <div class="partie2">
@@ -69,7 +71,7 @@
         <p>Benjamin qui utilise son ordinateur, Google Image</p></div>
     <p>Il ne s’est pas seulement contenté de changeait ses notes, il a également
         hacker les services secrets danois afin de télécharger beaucoup de dossiers
-        confidentiels. Ses dossiers contenaient des informations importantes sur sa
+        confidentiels. Ses dossiers contenaient <strong>des informations importantes</strong> sur sa
         mère qu’il pensait décédé, jusqu’à ce les services policiers danois lui
         montre une vidéo d’elle vivante. Malheureusement, lorsqu'il a hacker les
         services secrets danois, ce qu'il ne savait pas c'est qu'ils aller le
