--- a/Pollution.html
+++ b/Pollution.html
@@ -43,7 +43,7 @@
     <h2>Savais-tu qu'internet pollue?</h2>
     <p>Encore aujourd'hui, peu de personnes le savent, mais le numérique est un
         domaine très polluant. Il y aurait environ 4.1 milliards d'utilisateurs
-        avec 34 milliards d'appareils numériques. Lorsque nous parlons de la
+        avec <strong>34 milliards d'appareils numériques</strong>. Lorsque nous parlons de la
         pollution numérique nous incluant la fabrication des appareils électriques,
         l'utilisation de chaque usager ainsi que les déchets numériques. Les
         émissions de gaz à effet de serre du au domaine du numérique font 25% des
