--- a/Solutions.html
+++ b/Solutions.html
@@ -68,8 +68,8 @@
 <div class="par2">
     <div class="mac"><img src="img/Solutions/affichage.png" height="228" width="375"><p class="lgd1">Exemples de dossiers télécharger sur un ordinateur, Google Image</p></div>
     <p>Peut-être que Benjamin ne connaissez pas l'importance de la pollution
-        numérique. En France, c’est 40% des français qui affirment y être
-        sensibilisé, en 2019, mais elle reste encore floue pour certains.</p>
+        numérique. En France, c’est <strong>40% des français qui affirment y être
+        sensibilisé</strong>, en 2019, mais elle reste encore floue pour certains.</p>
 </div>
 
 <div class="par3">
@@ -99,10 +99,10 @@
     </div>
     <p>Surtout, que comme la plupart des personnes, on télécharge des applications
         "au cas où" mais ce n'est pas ce qu'il faut faire. Il existe des sites qui
-        veillent à la réduction de la pollution numérique comme Clickclean, qui
+        veillent à la réduction de la pollution numérique comme <strong>Clickclean</strong>, qui
         évalue la consommation énergétique des applications et des sites utilisés
         dans le monde. Ils sont notés d'A à F et A étant pour émettre les moins
-        polluantes. De plus, il y a Cleanfox, qui participe à la réduction de la
+        polluantes. De plus, il y a <strong>Cleanfox</strong>, qui participe à la réduction de la
         pollution numérique. Ce site consiste à supprimer et de se désabonner de
         mails non utile à l'utilisateur, ce qui permet de réduire son empreinte de
         carbone.</p>
@@ -115,7 +115,7 @@
             <li>Privilégie des moteurs de recherches qui sont engagées.</li>
         </ul>
     </div>
-    <p>Il y a écosia, qui reverse 80% de ses bénéfices afin de planter des arbres,
+    <p>Il y a <strong>écosia</strong>, qui reverse 80% de ses bénéfices afin de planter des arbres,
         pour lutter contre la déforestation. Lilo, un moteur de recherche solidaire
         qui finance gratuitement les projets que tu as choisis, il en existe encore
         d'autres.</p>
