--- a/Codepoursuite.html
+++ b/Codepoursuite.html
@@ -30,7 +30,7 @@
             <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
-    <div class="logo"><a href="index.html"><img src="img/dc.png" height="74" width="94"></a></div>
+    <div class="logo"><a href="index.html"><img src="img/dc.png" alt="dc.png" height="74" width="94"></a></div>
     <div class="fond_header"></div>
     <div class="titre_projet"><p>Data Code</p></div>
     <div class="titre_projet2"><p>Un clic ! c'est tout !</p></div>
@@ -38,13 +38,13 @@
 
 
 <div class="haut-image">
-    <img src="img/codepoursuite/prem_img.png" width="375" height="812">
+    <img src="img/codepoursuite/prem_img.png" alt="prem_img.png" width="375" height="812">
 </div>
 <div class="rect-marine"></div>
 
 <div class="partie1">
     <div class="haut-image2">
-        <img src="img/codepoursuite/table.jpg" width="335" height="223">
+        <img src="img/codepoursuite/table.jpg" alt="table.jpg" width="335" height="223">
         <p>Image de Benjamin et Savannah, Google Image</p>
     </div>
 
@@ -67,7 +67,7 @@
 </div>
 
 <div class="partie2">
-    <div class="img3"><img src="img/codepoursuite/ben.png" width="375" height="270">
+    <div class="img3"><img src="img/codepoursuite/ben.png" alt="ben.png" width="375" height="270">
         <p>Benjamin qui utilise son ordinateur, Google Image</p></div>
     <p>Il ne s’est pas seulement contenté de changeait ses notes, il a également
         hacker les services secrets danois afin de télécharger beaucoup de dossiers
@@ -83,7 +83,7 @@
 
 <div class="partie3">
     <div class="img4">
-     <img src="img/codepoursuite/codage.jpg" width="375" height="270">
+     <img src="img/codepoursuite/codage.jpg" alt="coage.jpg" width="375" height="270">
      <p>Benjamin pirate l’ordinateur de sa professeur, Capture d'écran du film Code Poursuite</p></div>
     <h2>Cependant, Benjamin pollue sans le savoir</h2>
     <p>Le personnage principal pollue avec le numérique tout le long du film. On
@@ -102,7 +102,7 @@
 </div>
 
 <div class="partie4">
-    <div class="img5"><img src="img/codepoursuite/telephones.jpg" width="375" height="270"></div>
+    <div class="img5"><img src="img/codepoursuite/telephones.jpg" alt="telephones.jpg" width="375" height="270"></div>
     <div class="leg4">Benjamin jette son téléphone ainsi que celui de son amie alors qu’ils sont fonctionnels,</div>
     <div class="leg4_2">Capture d'écran du film Code Poursuite</div>
     <p>Mais comme on peut le voir, ce n’est pas le seul à polluer, les services
@@ -111,7 +111,7 @@
         qui consiste à changer les pensées des gens. De plus, ils possèdent des
         machines qui utilisent pour tester chaque code jusqu’à trouver le bon qui
         leur permettraient d’obtenir leur résultat voulu.</p>
-    <div class="img6"><img src="img/codepoursuite/integration.png" width="375" height="270">
+    <div class="img6"><img src="img/codepoursuite/integration.png" alt="integration.png" width="375" height="270">
         <p>Algorithme écrit sur un ordinateur, Pintesrest</p></div>
 </div>
 
@@ -127,31 +127,31 @@
         <section class="carousel">
             <ul class="carousel-items">
                 <li class="imag_1">
-                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=234164.html"><img src="img/films/imag_1.jpg" height="356" width="267">
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=234164.html"><img src="img/films/imag_1.jpg" alt="imag1" height="356" width="267">
                     <p>The Circle</p></a>
                 </li>
                 <li class="imag_2">
-                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=229831.html"><img src="img/films/imag_2.jpg" height="357" width="267">
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=229831.html"><img src="img/films/imag_2.jpg" alt="imag2" height="357" width="267">
                     <p>Ready Player One</p></a>
                 </li>
                 <li class="imag_3">
-                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=235120.html"><img src="img/films/imag_3.jpg" height="357" width="267">
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=235120.html"><img src="img/films/imag_3.jpg" alt="imag3" height="357" width="267">
                     <p>Nerve</p></a>
                 </li>
                 <li class="imag_4">
-                    <a href="https://www.allocine.fr/video/player_gen_cmedia=19552491&cserie=17966.html"><img src="img/films/imag_4.jpg" height="350" width="265" >
+                    <a href="https://www.allocine.fr/video/player_gen_cmedia=19552491&cserie=17966.html"><img src="img/films/imag_4.jpg" alt="imag4" height="350" width="265" >
                     <p>Mr. Robot</p></a>
                 </li>
                 <li class="imag_5">
-                    <a href="https://www.allocine.fr/video/player_gen_cmedia=19584038&cserie=24940.html"><img src="img/films/imag_5.jpg" height="350" width="263">
+                    <a href="https://www.allocine.fr/video/player_gen_cmedia=19584038&cserie=24940.html"><img src="img/films/imag_5.jpg" alt="imag5" height="350" width="263">
                     <p>How to sell drugs online</p></a>
                 </li>
                 <li class="imag_6">
-                    <a href="https://www.allocine.fr/series/ficheserie_gen_cserie=10855.html"><img src="img/films/imag_6.jpg" height="350" width="263">
+                    <a href="https://www.allocine.fr/series/ficheserie_gen_cserie=10855.html"><img src="img/films/imag_6.jpg" alt="imag6" height="350" width="263">
                     <p>Black Mirror</p></a>
                 </li>
                 <li class="imag_7">
-                    <a href="https://www.allocine.fr/series/ficheserie_gen_cserie=26491.html"><img src="img/films/imag_7.jpg" height="350" width="263">
+                    <a href="https://www.allocine.fr/series/ficheserie_gen_cserie=26491.html"><img src="img/films/imag_7.jpg" alt="imag7" height="350" width="263">
                     <p>Control Z</p></a>
                 </li>
             </ul>
