--- a/Pollution.html
+++ b/Pollution.html
@@ -30,14 +30,14 @@
             <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
-    <div class="logo"><a href="index.html"><img src="img/dc.png" height="74" width="94"></a></div>
+    <div class="logo"><a href="index.html"><img src="img/dc.png" alt="dc.png" height="74" width="94"></a></div>
     <div class="fond_header"></div>
     <div class="titre_projet"><p>Data Code</p></div>
     <div class="titre_projet2"><p>Un clic ! c'est tout !</p></div>
 </header>
 
 <div class="part1">
-    <div class="terre-img"><img src="img/pollution/earth.png" width="375" height="666"></div>
+    <div class="terre-img"><img src="img/pollution/earth.png" alt="earth.png" width="375" height="666"></div>
     <h1>Pollution numérique</h1>
     <div class="sous-titre2"><p>Le numérique est responsable de près de 4% des émissions de gaz à effet de serre dans le monde, d’après l’ADEME .</p></div>
     <h2>Savais-tu qu'internet pollue?</h2>
@@ -52,14 +52,14 @@
 </div>
 
 <div class="part2">
-    <div class="data-center"><img src="img/pollution/data-center.png" width="375" height="250"><p>Benjamin qui utilise son ordinateur, Google Image</p></div>
+    <div class="data-center"><img src="img/pollution/data-center.png" alt="data.png" width="375" height="250"><p>Benjamin qui utilise son ordinateur, Google Image</p></div>
     <p>Internet est composé de nombreux équipements informatiques, qui permettent
         de stocker et de transférer des données. Les objets numériques produisent
         des émissions de CO₂. C’est ce qu’on appelle le poids carbone. De plus, un
         simple ordinateur est considérablement composé d’éléments, principalement
         avec du plastique. C’est-à-dire qu’il contribue à la pollution plastique
         ainsi qu’à la pollution numérique.</p>
-    <div class="ordi_vue"><img src="img/pollution/ordi_vue.png" width="279" height="174"><p>Composition d'un ordinateur,</p></div>
+    <div class="ordi_vue"><img src="img/pollution/ordi_vue.png" alt="ordi-vu.png" width="279" height="174"><p>Composition d'un ordinateur,</p></div>
     <div class="legd3"><p>Google Image</p></div>
     <div class="art-3">Pour te donner un exemple, 8 à 10 milliards de mails sont échangés en 1
         heure. Tous les mails que tu possèdes reste stockés dans les data center,
@@ -70,7 +70,7 @@
 </div>
 
 <div class="part3">
-    <div class="inter"><img src="img/pollution/inter.png" width="375" height="231"><p>Parcours d'un mail, Google Image</p></div>
+    <div class="inter"><img src="img/pollution/inter.png" alt="inter.png" width="375" height="231"><p>Parcours d'un mail, Google Image</p></div>
     <h2 class="inter-titre2_2">La vie de notre planète se dégrade</h2>
     <p>
         "La pollution numérique est une pollution invisible qui grandit à une
@@ -88,13 +88,13 @@
 </div>
 
 <div class="part4">
-    <div class="jeunes"><img src="img/pollution/jeune.png" width="375" height="181"><p>Groupe d’adolescent avec leurs téléphones, Google Image</p></div>
+    <div class="jeunes"><img src="img/pollution/jeune.png" alt="jeune.png" width="375" height="181"><p>Groupe d’adolescent avec leurs téléphones, Google Image</p></div>
     <div class="art-5">Il y a encore énormément de système qui pollue, comme le streaming, ou bien
         les applications qui réunissent des vidéos comme Netflix et YouTube, de
         plus, les réseaux sociaux, les commandes faites sur internet, le
         e-commerce, polluent également, ainsi que les recherches sur Google et
         chaque messages /vidéos envoyés.</div>
-    <div class="phone"><img src="img/pollution/phone.png" width="375" height="812"><p>Applications installés sur téléphone, Google Image</p></div>
+    <div class="phone"><img src="img/pollution/phone.png" alt="phone.png" width="375" height="812"><p>Applications installés sur téléphone, Google Image</p></div>
 </div>
 
 <div class="part5">
@@ -107,7 +107,7 @@
 
 <div class="bbt"><a href="Solutions.html"></a>
     <div class="tex-clic1_1"><a href="Solutions.html"><p>Moins polluer</p></a></div>
-    <div class="tex-clic2_2"><a href="Codepoursuite.html"><p>Article suivant</p></a></div>
+    <div class="tex-clic2_2"><a href="Solutions.html"><p>Article suivant</p></a></div>
 </div>
 
 <footer>
