--- a/Solutions.html
+++ b/Solutions.html
@@ -30,7 +30,7 @@
             <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
-    <div class="logo"><a href="index.html"><img src="img/dc.png" height="74" width="94"></a></div>
+    <div class="logo"><a href="index.html"><img src="img/dc.png" alt="dc.png" height="74" width="94"></a></div>
     <div class="fond_header"></div>
     <div class="titre_projet"><p>Data Code</p></div>
     <div class="titre_projet2"><p>Un clic ! c'est tout !</p></div>
@@ -38,8 +38,8 @@
 
 <div class="haut-imgs">
     <div class="rect-bleu"></div>
-    <div class="img-ter"><img src="img/Solutions/terre.jpg" height="240" width="240"></div>
-    <div class="iglo"><img src="img/Solutions/recycle.png" height="78" width="78"></div>
+    <div class="img-ter"><img src="img/Solutions/terre.jpg" alt="terre.jpg" height="240" width="240"></div>
+    <div class="iglo"><img src="img/Solutions/recycle.png" alt="recycle.png" height="78" width="78"></div>
 </div>
 
 
@@ -66,14 +66,14 @@
 </div>
 
 <div class="par2">
-    <div class="mac"><img src="img/Solutions/affichage.png" height="228" width="375"><p class="lgd1">Exemples de dossiers télécharger sur un ordinateur, Google Image</p></div>
+    <div class="mac"><img src="img/Solutions/affichage.png" alt="affichage.png" height="228" width="375"><p class="lgd1">Exemples de dossiers télécharger sur un ordinateur, Google Image</p></div>
     <p>Peut-être que Benjamin ne connaissez pas l'importance de la pollution
         numérique. En France, c’est <strong>40% des français qui affirment y être
         sensibilisé</strong>, en 2019, mais elle reste encore floue pour certains.</p>
 </div>
 
 <div class="par3">
-    <div class="quest"><img src="img/Solutions/quest.png" height="812" width="375"><p>Exemples de dossiers télécharger sur un ordinateur, Google Image</p></div>
+    <div class="quest"><img src="img/Solutions/quest.png" alt="quest.png" height="812" width="375"><p>Exemples de dossiers télécharger sur un ordinateur, Google Image</p></div>
     <h2>Il existe encore des solutions qui pourrait t'aider</h2>
     <p>Tu commencer par faire ce qui va être énoncer prochainement:</p>
     <div class="list">
@@ -90,7 +90,7 @@
 </div>
 
 <div class="par4">
-    <div class="anciens-tels"><img src="img/Solutions/anciens-tels.jpg" height="281" width="375">
+    <div class="anciens-tels"><img src="img/Solutions/anciens-tels.jpg" alt="anciens.jpg" height="281" width="375">
         <p>Les téléphones qui restent dans tes tiroirs, Google Image</p></div>
     <div class="list2">
         <ul>
@@ -109,7 +109,7 @@
 </div>
 
 <div class="par5">
-    <div class="firefox"><img src="img/Solutions/firefox.png" height="329" width="375"><p>Site Web Cleanfox, Google Image</p></div>
+    <div class="firefox"><img src="img/Solutions/firefox.png" alt="firefox.png" height="329" width="375"><p>Site Web Cleanfox, Google Image</p></div>
     <div class="list3">
         <ul>
             <li>Privilégie des moteurs de recherches qui sont engagées.</li>
@@ -119,7 +119,7 @@
         pour lutter contre la déforestation. Lilo, un moteur de recherche solidaire
         qui finance gratuitement les projets que tu as choisis, il en existe encore
         d'autres.</p>
-    <div class="ecosia"><img src="img/Solutions/ecosia.png" height="324" width="375"><p>Moteur de recherche écosia, Google Image</p></div>
+    <div class="ecosia"><img src="img/Solutions/ecosia.png" alt="ecosia.png" height="324" width="375"><p>Moteur de recherche écosia, Google Image</p></div>
 </div>
 
 
