--- a/a-propos.html
+++ b/a-propos.html
@@ -30,14 +30,14 @@
             <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
-    <div class="logo"><a href="index.html"><img src="img/dc.png" height="74" width="94"></a></div>
+    <div class="logo"><a href="index.html"><img src="img/dc.png" alt="dc.png" height="74" width="94"></a></div>
     <div class="fond_header"></div>
     <div class="titre_projet"><p>Data Code</p></div>
     <div class="titre_projet2"><p>Un clic ! c'est tout !</p></div>
 </header>
 
 <div class="class">
-    <img src="img/apropos/class.png" height="276" width="375" ">
+    <img src="img/apropos/class.png" alt="class.png" height="276" width="375" ">
 </div>
 <div class="present">
     <p>
@@ -53,12 +53,12 @@
 </div>
 
 <div class="machine">
-    <img src="img/apropos/machine.png" height="812" width="375" ">
+    <img src="img/apropos/machine.png" alt="machine.png" height="812" width="375" ">
 </div>
 <div class="contact-moi">
     <p>Contact moi</p>
 </div>
-<div class="edit"><img src="img/apropos/edit.png" height="83" width="83" "></div>
+<div class="edit"><img src="img/apropos/edit.png" alt="edit.png" height="83" width="83" "></div>
 <div class="rect-violet"></div>
 
 
