--- a/article-scientifique.html
+++ b/article-scientifique.html
@@ -30,21 +30,21 @@
             <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
-    <div class="logo"><a href="index.html"><img src="img/dc.png" height="74" width="94"></a></div>
+    <div class="logo"><a href="index.html"><img src="img/dc.png" alt="dc.png" height="74" width="94"></a></div>
     <div class="fond_header"></div>
     <div class="titre_projet"><p>Data Code</p></div>
     <div class="titre_projet2"><p>Un clic ! c'est tout !</p></div>
 </header>
 
 <div class="parag1">
-    <div class="teletravail"><img src="img/article-scientifique/teletravrail.png" width="375" height="812"></div>
+    <div class="teletravail"><img src="img/article-scientifique/teletravrail.png" alt="teletravail.png" width="375" height="812"></div>
     <h1 class="tt1">Les clés pour comprendre l’impact du télétravail</h1>
     <p>Économie de temps de transport, réduction des émissions de CO 2,
         amélioration de la qualité de vie des salariés… En cette période de crise
         sanitaire, le télétravail a le vent en poupe. Pourtant, ce nouveau mode de
         travail présente aussi des inconvénients et affiche de vraies limites.
         Explications en 5 points.</p>
-    <div class="table"><img src="img/article-scientifique/table.png" width="375" height="246"></div>
+    <div class="table"><img src="img/article-scientifique/table.png" alt="table.png" width="375" height="246"></div>
     <div class="lg1">Image du télétravail, Google Image</div>
 </div>
 
@@ -66,7 +66,7 @@
     <div class="violet1"></div>
     <div class="violet2"></div>
     <div class="violet3"></div>
-    <div class="carte"><img src="img/article-scientifique/carte.jpg" width="375" height="257"></div>
+    <div class="carte"><img src="img/article-scientifique/carte.jpg" alt="carte.jpg" width="375" height="257"></div>
     <div class="lg2"><p>Carte de l'Europe, Google Image</p></div>
 </div>
 
@@ -82,7 +82,7 @@
         pourrait donc permettre de diminuer significativement la circulation
         routière. […]</p1>
 
-    <div class="bouchon"><img src="img/article-scientifique/bouchon.jpg" width="375" height="273"></div>
+    <div class="bouchon"><img src="img/article-scientifique/bouchon.jpg" alt="bouchon.jpg" width="375" height="273"></div>
     <div class="lg3">Trajet entre le domicile et le travail, Google Image</div>
 </div>
 
@@ -94,7 +94,7 @@
         <p>Télétravailler 3 jours par semaine permettrait… <br>- 30 % d’impacts environnementaux des déplacements <br>- 58 % d’émissions de particules fines
         <br>Si 50% des français télétravaillaient, il y aurait… <br>- 0,5 % d’émissions nationales de gaz à effet de serre
         <br>3 600 vols Paris-New York économisés</p></div>
-    <div class="billet"><img src="img/article-scientifique/billet.png" width="375" height="812"></div>
+    <div class="billet"><img src="img/article-scientifique/billet.png" alt="billet.jpg" width="375" height="812"></div>
     <div class="lg4">Billets achetés pour chaque vols d’avions, Google Image</div>
 </div>
 
@@ -111,7 +111,7 @@
     </div>
     <div class="nom-auteur"><h2>Thomas Allard</h2></div>
 
-    <div class="ademe"><img src="img/article-scientifique/ademe.jpg" width="257" height="257"></div>
+    <div class="ademe"><img src="img/article-scientifique/ademe.jpg" alt="ademe.jpg" width="257" height="257"></div>
     <div class="lg5">Ademe: agence de l’environnement et de la maitrise de l’énergie</div>
     <div class="lg5-2">Google Image</div>
     <div class="lien-art"><a href="https://articles.cafeyn.co/cf81e6/science-et-vie/2020-09-23/les-cles-pour-comprendre-limpact-du-teletravailHaut%20du%20formulaire"><p>Les clés pour comprendre l'impact du télétravail</p></a></div>
