--- a/autres-projets.html
+++ b/autres-projets.html
@@ -30,7 +30,7 @@
             <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
-    <div class="logo"><a href="index.html"><img src="img/dc.png" height="74" width="94"></a></div>
+    <div class="logo"><a href="index.html"><img src="img/dc.png" alt="dc.png" height="74" width="94"></a></div>
     <div class="fond_header"></div>
     <div class="titre_projet"><p>Data Code</p></div>
     <div class="titre_projet2"><p>Un clic ! c'est tout !</p></div>
@@ -41,34 +41,34 @@
 
 <main>
     <div class="ligne1">
-        <div class="ba1"><a href="https://projets1.sitecali.fr/"><img src="img/autres-projets/her.jpg" width="153" height="204"><p><i>Her</i><br>Cin&Science</p></a></div>
-        <div class="ba2"><a href="https://projets1.taniaandre.fr/"><img src="img/autres-projets/ghost.jpg" width="143" height="204"><p><i>Ghost In Shell</i><br>Hyperconnexion</p></a></div>
+        <div class="ba1"><a href="https://projets1.sitecali.fr/"><img src="img/autres-projets/her.jpg" alt="her.jpg" width="153" height="204"><p><i>Her</i><br>Cin&Science</p></a></div>
+        <div class="ba2"><a href="https://projets1.taniaandre.fr/"><img src="img/autres-projets/ghost.jpg" alt="ghost.jpg" width="143" height="204"><p><i>Ghost In Shell</i><br>Hyperconnexion</p></a></div>
     </div>
 
     <div class="ligne2">
-        <div class="ba3"><a href="https://projets1.alexanthoine.fr/"><img src="img/autres-projets/blackmirror.jpg" width="148.3" height="218"><p><i>Balck Mirror</i></p></a></div>
-        <div class="ba4"><a href="https://projets1.thibaudbarrand.fr/"><img src="img/autres-projets/htsdo.jpg" width="164" height="218"><p><i>How To Sell </i><br>Drugs Online</p></a></div>
+        <div class="ba3"><a href="https://projets1.alexanthoine.fr/"><img src="img/autres-projets/blackmirror.jpg" alt="blackmirror.jpg" width="148.3" height="218"><p><i>Balck Mirror</i></p></a></div>
+        <div class="ba4"><a href="https://projets1.thibaudbarrand.fr/"><img src="img/autres-projets/htsdo.jpg" alt="htsdo;jpg" width="164" height="218"><p><i>How To Sell </i><br>Drugs Online</p></a></div>
         <div class="blackmirror2"><a href="https://projets1.alexanthoine.fr/"><p>Black Data</p></a></div>
         <div class="htsdo2"><a href="https://projets1.thibaudbarrand.fr/"><p>Wattor</p></a></div>
     </div>
 
     <div class="ligne3">
-        <div class="ba5"><a href="https://projets1.lenabtlrd.fr/"><img src="img/autres-projets/search.jpg" width="153" height="204"><p><i>Searching: <br>Portée disparue</i>Pollution cachée</p></a></div>
-        <div class="ba6"><a href="https://projets1.nbaumann.fr/"><img src="img/autres-projets/south-park.jpg" width="143" height="204"><p><i>South park</i><br>South Park <br>dénonce amazon</p></a></div>
+        <div class="ba5"><a href="https://projets1.lenabtlrd.fr/"><img src="img/autres-projets/search.jpg" alt="search.jpg" width="153" height="204"><p><i>Searching: <br>Portée disparue</i>Pollution cachée</p></a></div>
+        <div class="ba6"><a href="https://projets1.nbaumann.fr/"><img src="img/autres-projets/south-park.jpg" alt="south.jpg" width="143" height="204"><p><i>South park</i><br>South Park <br>dénonce amazon</p></a></div>
     </div>
 
     <div class="ligne4">
-        <div class="ba7"><a href="https://projets1.marinebeurier.fr/"><img src="img/autres-projets/girlboss.jpg" width="152" height="226"><p><i>Girlboss</i><br>Polluting girl</p></a></div>
-        <div class="ba8"><a href="https://projets1.raphbonin.fr/"><img src="img/autres-projets/eagle-eye.jpg" width="150.67" height="226"><p><i>L'oeil du mal</i><br>Pollution cachée <br>des data center</p></a></div>
+        <div class="ba7"><a href="https://projets1.marinebeurier.fr/"><img src="img/autres-projets/girlboss.jpg" alt="girlboss.jpg" width="152" height="226"><p><i>Girlboss</i><br>Polluting girl</p></a></div>
+        <div class="ba8"><a href="https://projets1.raphbonin.fr/"><img src="img/autres-projets/eagle-eye.jpg" alt="eale.jpg" width="150.67" height="226"><p><i>L'oeil du mal</i><br>Pollution cachée <br>des data center</p></a></div>
     </div>
 
     <div class="ligne5">
-        <div class="ba9"><a href="https://projets1.mathisbotton.fr/"><img src="img/autres-projets/bladerunner.jpg" width="153" height="207"><p><i>Blade <br>Runner2049</i><br>Data Runner</p></a></div>
-        <div class="ba10"><a href="https://projets1.evaduxewy.fr/"><img src="img/autres-projets/hackers.jpg" width="153" height="210"><p><i>Hackers</i> <br>Centhack</p></a></div>
+        <div class="ba9"><a href="https://projets1.mathisbotton.fr/"><img src="img/autres-projets/bladerunner.jpg" alt="bladerunner.jpg" width="153" height="207"><p><i>Blade <br>Runner2049</i><br>Data Runner</p></a></div>
+        <div class="ba10"><a href="https://projets1.evaduxewy.fr/"><img src="img/autres-projets/hackers.jpg" alt="hackers.jpg" width="153" height="210"><p><i>Hackers</i> <br>Centhack</p></a></div>
     </div>
 
     <div class="ligne6">
-        <div class="ba11"><a href="https://projets1.nathanbroglin.fr"><img src="img/autres-projets/thesocial.jpg" width="154" height="206"></a><p><i>The social network</i><br></p></div>
+        <div class="ba11"><a href="https://projets1.nathanbroglin.fr"><img src="img/autres-projets/thesocial.jpg" alt="thesocial.jpg" width="154" height="206"></a><p><i>The social network</i><br></p></div>
         <div class="the-social2"><a href="https://projets1.nathanbroglin.fr"><p>The shadow of <br>sociability</p></a></div>
     </div>
 </main>
