--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/mescss/style-graphique.css">
 
 </head>
-<body class=" ">
+<body>
 <header>
     <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
         <div class="nav-toggle-bar"></div>
@@ -31,14 +31,14 @@
             <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
-    <div class="logo"><img src="img/dc.png" height="74" width="94"></div>
+    <div class="logo"><img src="img/dc.png" alt="dc.png" height="74" width="94"></div>
     <div class="fond_header"></div>
     <div class="titre_projet"><p>Data Code</p></div>
     <div class="titre_projet2"><p>Un clic ! c'est tout !</p></div>
 </header>
 
 <div class="image1">
-    <img src="img/Accueil/hacker.png" height="812" width="375">
+    <img src="img/Accueil/hacker.png" alt="hacker.png" height="812" width="375">
 </div>
 <div class="intro">
     <p>Comment Benjamin peut-il limiter son impact environnementale et réduire la pollution numérique?</p>
@@ -48,46 +48,46 @@
 </div>
 
 <div class="image2">
-    <img src="img/Accueil/benja_sav.png" height="189" width="336">
+    <img src="img/Accueil/benja_sav.png" alt="Benjamin_Savahanna" height="189" width="336">
 </div>
 
 <div class="image3">
-    <img src="img/Accueil/ordi.png" height="812" width="375">
+    <img src="img/Accueil/ordi.png" alt="ordi.png" height="812" width="375">
 </div>
 <div class="rect_titre1">
-    <a href="Codepoursuite.html"><img src="img/Accueil/titre1.png" height="176" width="314"></a>
+    <a href="Codepoursuite.html"><img src="img/Accueil/titre1.png" alt="titre1.png" height="176" width="314"></a>
 </div>
 <div class="title1">
     <a href="Codepoursuite.html"><p>Qui est Benjamin? Quel est son impact environnemental?</p></a>
 </div>
 <div class="fleche1">
-    <a href="Codepoursuite.html"><img src="img/Accueil/fleche1.png" height="29" width="51"></a>
+    <a href="Codepoursuite.html"><img src="img/Accueil/fleche1.png" alt="fleche1.png" height="29" width="51"></a>
 </div>
 
 <div class="image4">
-    <img src="img/Accueil/mac.png" height="812" width="375">
+    <img src="img/Accueil/mac.png" alt="mac.png" height="812" width="375">
 </div>
 <div class="rect_titre2">
-    <a href="Pollution.html"><img src="img/Accueil/titre2.png" height="176" width="314"></a>
+    <a href="Pollution.html"><img src="img/Accueil/titre2.png" alt="titre2.png" height="176" width="314"></a>
 </div>
 <div class="title2">
     <a href="Pollution.html"><p>La pollution numérique, des personnes ne connaissent pas, mais qu'est ce donc?</p></a>
 </div>
 <div class="fleche2">
-    <a href="Pollution.html"><img src="img/Accueil/fleche2.png" height="29" width="51"></a>
+    <a href="Pollution.html"><img src="img/Accueil/fleche2.png" alt="fleche2.png" height="29" width="51"></a>
 </div>
 
 <div class="image5">
-    <img src="img/Accueil/terre.png" height="667" width="375">
+    <img src="img/Accueil/terre.png" alt="terre.png" height="667" width="375">
 </div>
 <div class="rect_titre3">
-    <a href="Solutions.html"><img src="img/Accueil/titre3.png" height="176" width="314"></a>
+    <a href="Solutions.html"><img src="img/Accueil/titre3.png" alt="titre3.png" height="176" width="314"></a>
 </div>
 <div class="title3">
     <a href="Solutions.html"><p>Comment, pouvons-nous réduire notre impact environnemental en quelques clics.</p></a>
 </div>
 <div class="fleche3">
-    <a href="Solutions.html"><img src="img/Accueil/fleche3.png" height="29" width="51"></a>
+    <a href="Solutions.html"><img src="img/Accueil/fleche3.png" alt="fleche3.png" height="29" width="51"></a>
 </div>
 
 <footer>
